fixed partly overlapped text next to pbar tip

--- a/css/progressbar.css
+++ b/css/progressbar.css
@@ -45,6 +45,7 @@
 
 #donationText {
     position: absolute;
+    right: 12px;
     height: 100%;
     width: 100%;
     text-align: right;
